--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Damian Lucic | Educator and Web Designer</title> <!-- Updated title with keywords -->
+    <title>Damian Lucic | BTM Student at TMU</title> <!-- Updated title with keywords -->
     <meta name="description" content="Discover Damian Lucic's educational background in Business and Technology Management with a minor in Computer Science, his passion for web design, and achievements."> <!-- Meta description added -->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="main.js" defer></script>
