--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
         <div class="Home-Page">
             <h1>Welcome!</h1>
             <p class="title">
-                Hello! I'm Damian Lucic, currently pursuing a Business and <br>
-                Technology Management (BTM) program with a minor in Computer Science at Toronto Metropolitan University.
+                Hello! I'm Damian Lucic, currently pursuing the Business Technology Management (BTM) program <br> with a minor in Computer Science at Toronto Metropolitan University.
             </p>
         </div>
         <div class="resume-buttons">
-            <a href="link_to_your_resume.pdf" class="resume-button" download>View Resume</a>
+            <a href="Resume.pdf" class="resume-button" download>View Resume</a>
         </div>
     </div>
     
