--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
     <div class="main-content">
         <div class="Home-Page">
-            <h1>Welcome!</h1>
+            <h1 id="welcomeMessage">Welcome!</h1>
             <p class="title">
                 Hello! I'm Damian Lucic, currently pursuing the Business Technology Management (BTM) program <br> with a minor in Computer Science at Toronto Metropolitan University.
             </p>
         </div>
         <div class="resume-buttons">
-            <a href="Resume.pdf" class="resume-button" download>View Resume</a>
+            <a href="Resume.pdf" class="resume-button" download target="_blank">View Resume</a>
         </div>
     </div>
     
