--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </p>
         </div>
         <div class="resume-buttons">
-            <a href="Resume.pdf" class="resume-button" download target="_blank">View Resume</a>
+            <a href="assets/documents/Resume.pdf" class="resume-button" download target="_blank">View Resume</a>
         </div>
     </div>
 
@@ -42,7 +42,7 @@
                 <p>My skillset is as versatile as my interests, encompassing strong leadership, detail-oriented project management, and robust analytical abilities. Whether working solo or in a team, I adapt quickly, eager to learn and apply new skills. With CPR-C, First Aid, Python, and SQL certifications, I'm equipped to make a significant impact in my future endeavors.</p>
               </div>
             <div class="profile-image">
-                <img src="myimage.jpg" alt="Damian Lucic"> 
+                <img src="assets/images/myimage.jpg" alt="Damian Lucic"> 
             </div>
         </div>
     </section>
@@ -52,7 +52,7 @@
         <div class="projects-container">
             <div class="project">
                 <a href="https://www.instagram.com/daki.kicks/" class="project-image" title="Daki Kicks">
-                    <img src="daki-kicks.jpg" alt="Daki Kicks">
+                    <img src="assets/images/daki-kicks.jpg" alt="Daki Kicks">
                 </a>
                 <div class="project-details">
                     <h3><a href="https://www.instagram.com/daki.kicks/" title="Daki Kicks">Daki Kicks</a></h3>
@@ -61,7 +61,7 @@
             </div>
             <div class="project">
                 <a href="https://twitter.com/FCS_NFT" class="project-image" title="Future Children Society">
-                    <img src="FCS.jpg" alt="Future Children Society">
+                    <img src="assets/images/FCS.jpg" alt="Future Children Society">
                 </a>
                 <div class="project-details">
                     <h3><a href="https://twitter.com/FCS_NFT" title="Future Children Society">Future Children Society</a></h3>
@@ -70,7 +70,7 @@
             </div>
             <div class="project">
                 <a href="https://t.me/bet_pulse" class="project-image" title="Bet Pulse">
-                    <img src="BetPulse.jpg" alt="Bet Pulse">
+                    <img src="assets/images/BetPulse.jpg" alt="Bet Pulse">
                 </a>
                 <div class="project-details">
                     <h3><a href="https://t.me/bet_pulse" title="Bet Pulse">Bet Pulse</a></h3>
@@ -86,19 +86,19 @@
         <div class="contact-container">
             <div class="contact-methods">
                 <div class="contact-box">
-                    <img src="emailsymbol.png" alt="Email Icon" class="contact-icon">
+                    <img src="assets/images/emailsymbol.png" alt="Email Icon" class="contact-icon">
                     <h3>Email</h3>
                     <p>damian.lucic@torontomu.ca</p>
                     <a href="mailto:damian.lucic@torontomu.ca" class="message-button">Send a message</a>
                 </div>
                 <div class="contact-box">
-                    <img src="Whatsapp.png" alt="WhatsApp Icon" class="contact-icon">
+                    <img src="assets/images/Whatsapp.png" alt="WhatsApp Icon" class="contact-icon">
                     <h3>WhatsApp</h3>
                     <p>+16473657919</p>
                     <a href="https://wa.me/16473657919" class="message-button">Send a message</a>
                 </div>
                 <div class="contact-box">
-                    <img src="Instagram.png" alt="Instagram Icon" class="contact-icon">
+                    <img src="assets/images/Instagram.png" alt="Instagram Icon" class="contact-icon">
                     <h3>Instagram</h3>
                     <p>@Daki.eth</p>
                     <a href="https://www.instagram.com/Daki.eth" class="message-button">Send a message</a>
@@ -116,7 +116,7 @@
     </section>
 
     <div id="accessibility-options" aria-label="Accessibility Options">
-        <img src="accessability.png" alt="Accessibility Options" id="accessibility-trigger" role="button" aria-haspopup="true" aria-controls="options" style="cursor: pointer;">
+        <img src="assets/images/accessability.png" alt="Accessibility Options" id="accessibility-trigger" role="button" aria-haspopup="true" aria-controls="options" style="cursor: pointer;">
         <div id="options" class="hidden" aria-hidden="true" style="text-align: center;">
             <button id="increase-font-size" aria-label="Increase text size" style="margin: 5px;">Increase text size</button>
             <button id="decrease-font-size" aria-label="Decrease text size" style="margin: 5px;">Decrease text size</button>
@@ -131,19 +131,19 @@
             <h3>Connect with Damian Lucic</h3>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/damian-lucic/" title="LinkedIn" target="_blank">
-                    <img src="Linkedin.jpg" alt="LinkedIn">
+                    <img src="assets/images/Linkedin.jpg" alt="LinkedIn">
                 </a>
                 <a href="mailto:damian.lucic@torontomu.ca" title="Email">
-                    <img src="emailsymbol.png" alt="Email">
+                    <img src="assets/images/emailsymbol.png" alt="Email">
                 </a>
                 <a href="https://www.instagram.com/Daki.eth" title="Instagram">
-                    <img src="Instagram.png" alt="Instagram">
+                    <img src="assets/images/Instagram.png" alt="Instagram">
                 </a>
                 <a href="https://twitter.com/DakiCrypto" title="Twitter">
-                    <img src="twitter.png" alt="Twitter">
+                    <img src="assets/images/twitter.png" alt="Twitter">
                 </a>
                 <a href="https://wa.me/16473657919">
-                    <img src="Whatsapp.png" alt="Whatsapp">
+                    <img src="assets/images/Whatsapp.png" alt="Whatsapp">
                 </a>
             </div>
         </div>
