--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Damian Lucic | BTM Student at TMU</title>
     <meta name="description" content="Discover Damian Lucic's educational background in Business and Technology Management with a minor in Computer Science, his passion for web design, and achievements.">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="main.js" defer></script>
     <link rel="canonical" href="https://www.yourwebsite.com/">
 </head>
 
@@ -47,7 +46,7 @@
         </div>
     </section>
 
-    <section class="portfolio" id="portfolio">
+    <section id="portfolio">
         <h2 class="section-title">Portfolio</h2>
         <div class="projects-container">
             <div class="project">
@@ -116,7 +115,7 @@
     </section>
 
     <div id="accessibility-options" aria-label="Accessibility Options">
-        <img src="assets/images/accessability.png" alt="Accessibility Options" id="accessibility-trigger" role="button" aria-haspopup="true" aria-controls="options" style="cursor: pointer;">
+        <img src="assets/accessibility/accessability.png" alt="Accessibility Options" id="accessibility-trigger" role="button" aria-haspopup="true" aria-controls="options" style="cursor: pointer;">
         <div id="options" class="hidden" aria-hidden="true" style="text-align: center;">
             <button id="increase-font-size" aria-label="Increase text size" style="margin: 5px;">Increase text size</button>
             <button id="decrease-font-size" aria-label="Decrease text size" style="margin: 5px;">Decrease text size</button>
@@ -131,10 +130,10 @@
             <h3>Connect with Damian Lucic</h3>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/damian-lucic/" title="LinkedIn" target="_blank">
-                    <img src="assets/images/Linkedin.jpg" alt="LinkedIn">
+                    <img src="assets/images/linkedin.png" alt="LinkedIn">
                 </a>
                 <a href="mailto:damian.lucic@torontomu.ca" title="Email">
-                    <img src="assets/images/emailsymbol.png" alt="Email">
+                    <img src="assets/images/email.png" alt="Email">
                 </a>
                 <a href="https://www.instagram.com/Daki.eth" title="Instagram">
                     <img src="assets/images/Instagram.png" alt="Instagram">
@@ -145,6 +144,9 @@
                 <a href="https://wa.me/16473657919">
                     <img src="assets/images/Whatsapp.png" alt="Whatsapp">
                 </a>
+                <a href="https://github.com/daki-eth">
+                    <img src="assets/images/github.png" alt="Github">
+                </a>
             </div>
         </div>
         <div class="footer-bottom">
@@ -152,7 +154,6 @@
         </div>
     </footer>
     
-    <script src="main.js"></script>
     <script src="main.js" defer></script>
     
 </body>
