--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <section id="portfolio">
+    <section class="portfolio" id="portfolio">
         <h2 class="section-title">Portfolio</h2>
         <div class="projects-container">
             <div class="project">
@@ -85,7 +85,7 @@
         <div class="contact-container">
             <div class="contact-methods">
                 <div class="contact-box">
-                    <img src="assets/images/emailsymbol.png" alt="Email Icon" class="contact-icon">
+                    <img src="assets/images/email.png" alt="Email Icon" class="contact-icon">
                     <h3>Email</h3>
                     <p>damian.lucic@torontomu.ca</p>
                     <a href="mailto:damian.lucic@torontomu.ca" class="message-button">Send a message</a>
@@ -155,6 +155,5 @@
     </footer>
     
     <script src="main.js" defer></script>
-    
 </body>
 </html>
