--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Damian Lucic | BTM Student at TMU</title>
     <meta name="description" content="Discover Damian Lucic's educational background in Business and Technology Management with a minor in Computer Science, his passion for web design, and achievements.">
+    <meta name="keywords" content="Damian Lucic, BTM Student, TMU, Business and Technology Management, Computer Science, Web Design">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Damian Lucic">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="canonical" href="https://www.yourwebsite.com/">
+    <link rel="canonical" href="https://daki-eth.github.io/finalproject/">
 </head>
 
 <body>
@@ -73,7 +76,7 @@
                 </a>
                 <div class="project-details">
                     <h3><a href="https://t.me/bet_pulse" title="Bet Pulse">Bet Pulse</a></h3>
-                    <p>Co-Founder of Bet Pulse. A Sports Betting Service.</p>
+                    <p>Co-Founder of Bet Pulse. A Sports Betting Service</p>
                 </div>
             </div>
         </div>
@@ -104,23 +107,23 @@
                 </div>
             </div>
             <div class="contact-form">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
-                <textarea placeholder="Your message here..."></textarea>
-                <button type="submit" class="send-button">Send Message</button>
-                <button type="reset" class="clear-button">Clear</button>
-                <div class="form-feedback"></div>
+                <input type="text" id="full-name" placeholder="Full Name">
+                <input type="email" id="email-address" placeholder="Email Address">
+                <textarea id="message" placeholder="Your message here..."></textarea>
+                <input type="submit" class="send-button" id="send-button"></button>
+                <input type="reset" class="clear-button"></button>
+                <div class="form-feedback" id="form-feedback"></div>
             </div>
         </div>
     </section>
 
-    <div id="accessibility-options" aria-label="Accessibility Options">
+    <div id="accessibility-options">
         <img src="assets/accessibility/accessability.png" alt="Accessibility Options" id="accessibility-trigger" role="button" aria-haspopup="true" aria-controls="options" style="cursor: pointer;">
         <div id="options" class="hidden" aria-hidden="true" style="text-align: center;">
-            <button id="increase-font-size" aria-label="Increase text size" style="margin: 5px;">Increase text size</button>
-            <button id="decrease-font-size" aria-label="Decrease text size" style="margin: 5px;">Decrease text size</button>
-            <button id="toggle-color-theme" aria-label="Toggle color theme" style="margin: 5px;">Toggle color theme</button>
-            <button id="reset-accessibility" aria-label="Reset accessibility" style="margin: 5px;">Reset settings</button>
+            <button id="increase-font-size">Increase text size</button>
+            <button id="decrease-font-size">Decrease text size</button>
+            <button id="toggle-color-theme">Toggle color theme</button>
+            <button id="reset-accessibility">Reset settings</button>
         </div>
     </div>
 
@@ -151,6 +154,12 @@
         </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Damian Lucic. All rights reserved.</p>
+        </div>
+        <div class="seo-elements" style="display: none;">
+            <meta name="keywords" content="Damian Lucic, BTM Student, TMU, Business and Technology Management, Computer Science, Web Design">
+            <meta name="robots" content="index, follow">
+            <meta name="author" content="Damian Lucic">
+            <link rel="canonical" href="https://daki-eth.github.io/finalproject/">
         </div>
     </footer>
     
